ERR
Cell In[40], line 6
    os.system(f'PYTHONPATH=$PWD "{py}" -c \"from src.models.video_model import DMC; import inspect; print(\\'Imported DMC OK\\'); print(\\'DMC.__init__ sig=\\', inspect.signature(DMC.__init__))\"')
              ^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
